--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'g:\\\\100-days-of-dl\\\\Krish_Naik\\\\FSDS_Ineuron_Course\\\\projects\\\\Kidney-Disease-Classification-DL-Project\\\\research'"
+       "'c:\\\\Harshal\\\\Data-Science-Projects\\\\Kidney-Disease-Classification-DL-Project\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'g:\\\\100-days-of-dl\\\\Krish_Naik\\\\FSDS_Ineuron_Course\\\\projects\\\\Kidney-Disease-Classification-DL-Project'"
+       "'c:\\\\Harshal\\\\Data-Science-Projects\\\\Kidney-Disease-Classification-DL-Project'"
       ]
      },
      "execution_count": 4,
@@ -108,17 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from kidneydieaseClassifier.constants import *\n",
-    "from kidneydieaseClassifier.utils.common import read_yaml, create_directories, save_json"
+    "from src.kidneydieaseClassifier.constants import *\n",
+    "from src.kidneydieaseClassifier.utils.common import read_yaml, create_directories, save_json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,53 +225,66 @@
     "                # There are other ways to use the Model Registry, which depends on the use case,\n",
     "                # please refer to the doc for more information:\n",
     "                # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
-    "                mlflow.keras.log_model(self.model, \"model\", registered_model_name=\"VGG16Model\")\n",
+    "                mlflow.keras.log_model(self.model, \"model\", registered_model_name=\"kidney_disease_model\")\n",
     "            else:\n",
     "                mlflow.keras.log_model(self.model, \"model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-03 12:24:36,087: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-10-03 12:24:36,096: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-10-03 12:24:36,100: INFO: common: created directory at: artifacts]\n",
-      "Found 139 images belonging to 2 classes.\n",
-      "9/9 [==============================] - 80s 8s/step - loss: 32.0372 - accuracy: 0.4820\n",
-      "[2023-10-03 12:25:59,993: INFO: common: json file saved at: scores.json]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/10/03 12:26:05 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "[2024-11-22 22:52:55,996: INFO: common: yaml file: config\\config.yaml loaded successfully]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-03 12:26:10,871: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\Harshal\\AppData\\Local\\Temp\\tmp1hq15mg_\\model\\data\\model\\assets\n",
-      "[2023-10-03 12:26:14,636: INFO: builder_impl: Assets written to: C:\\Users\\Harshal\\AppData\\Local\\Temp\\tmp1hq15mg_\\model\\data\\model\\assets]\n"
+      "[2024-11-22 22:52:56,009: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-11-22 22:52:56,014: INFO: common: created directory at: artifacts]\n",
+      "Found 139 images belonging to 2 classes.\n",
+      "9/9 [==============================] - 21s 2s/step - loss: 6.2735 - accuracy: 0.5468\n",
+      "[2024-11-22 22:53:18,366: INFO: common: json file saved at: scores.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "g:\\100-days-of-dl\\Krish_Naik\\FSDS_Ineuron_Course\\projects\\Kidney-Disease-Classification-DL-Project\\venv\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-      "Successfully registered model 'VGG16Model'.\n",
-      "2023/10/03 12:28:20 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 1\n",
-      "Created version '1' of model 'VGG16Model'.\n"
+      "2024/11/22 22:53:21 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-11-22 22:53:23,198: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\durge\\AppData\\Local\\Temp\\tmpdjn53sp_\\model\\data\\model\\assets\n",
+      "[2024-11-22 22:53:24,151: INFO: builder_impl: Assets written to: C:\\Users\\durge\\AppData\\Local\\Temp\\tmpdjn53sp_\\model\\data\\model\\assets]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/11/22 22:53:45 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "Successfully registered model 'kidney_disease_model'.\n",
+      "2024/11/22 22:55:07 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: kidney_disease_model, version 1\n",
+      "Created version '1' of model 'kidney_disease_model'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run hilarious-mule-542 at: https://dagshub.com/HARSHALKUMRE/Kidney-Disease-Classification-DL-Project.mlflow/#/experiments/0/runs/4f848a8fb9074c83a79121f853f53c77\n",
+      "🧪 View experiment at: https://dagshub.com/HARSHALKUMRE/Kidney-Disease-Classification-DL-Project.mlflow/#/experiments/0\n"
      ]
     }
    ],
@@ -325,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
